--- a/UDMLoader.csproj
+++ b/UDMLoader.csproj
@@ -65,7 +65,9 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="UDMInstall.xml" />
+    <Content Include="UDMInstall.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
